fixed gaps

--- a/01-oppimistehtavat/01-part1/src/index.css
+++ b/01-oppimistehtavat/01-part1/src/index.css
@@ -233,7 +233,7 @@ html,
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 4px;
   margin-top: 20px;
 }
 
@@ -282,7 +282,7 @@ h2 {
 .special-buttons {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
+  gap: 4px;
   max-width: 450px;
   margin: 10px auto 20px auto;
 }
